--- a/11_Browser/Project-1_Jira_Ticket_clone/index.html
+++ b/11_Browser/Project-1_Jira_Ticket_clone/index.html
@@ -37,7 +37,7 @@
     </div>
     <!--Ticket Box-->
     <div class="main-cont">
-        
+
     </div>
 
 
@@ -55,6 +55,7 @@
         </div>
 
     </div>
+    <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
 
     <script src="./script.js"></script>
 
